unpackaged/main/default/objects/Classification_CA__c/Classification_CA__c.object-meta.xml
<CustomObject>
    <label>Classification - CA</label>
    <nameField>
        <label>Nom de Classification - CA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classification - CA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>