unpackaged/main/default/objects/Classification_CA__c/fields/Entite_Legale__c.field-meta.xml
<CustomField>
    <fullName>Entite_Legale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité Légale</label>
    <referenceTo>LegalEntity__c</referenceTo>
    <relationshipLabel>Classification - CA</relationshipLabel>
    <relationshipName>Classification_CA</relationshipName>
    <type>Lookup</type>
</CustomField>