unpackaged/main/default/objects/Classification_CA__c/fields/Tranche_Basse__c.field-meta.xml
<CustomField>
    <fullName>Tranche_Basse__c</fullName>
    <label>Tranche Basse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>