unpackaged/main/default/objects/Classification_CA__c/fields/Tranche_Haute__c.field-meta.xml
<CustomField>
    <fullName>Tranche_Haute__c</fullName>
    <label>Tranche Haute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>