unpackaged/main/default/objects/Classification_CA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Line__c</columns>
    <columns>Tranche_Basse__c</columns>
    <columns>Tranche_Haute__c</columns>
    <columns>Entite_Legale__c</columns>
    <columns>Classification__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>